# streamlit-chat

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Caddyfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  main.py
backend/app/: auth.py  auth_config.py
backend/app/db/: db.py
backend/app/models/: chat_config.py  example.py
backend/app/routers/: __init__.py  auth.py  chat.py  example.py  health.py  root.py
caddy/: Dockerfile
chat/: main.py  requirements.txt
infrastructure/: .env.backend.example  .env.chat.example  .gitignore  README.md  build-and-push-backend.sh  build-and-push-caddy.sh  build-and-push-docker.sh  build-and-push-streamlit-chat.sh  deploy-app.sh  main.tf  outputs.tf  push-caddyfile-only.sh  push-caddyfile.sh  push-docker-compose.sh  terraform.tfvars.example  user-data.sh  variables.tf
shared/: chat_config.py  db.py  logger.py
streamlit-chat/: Dockerfile  config.py  db.py  main.py  password.py  prompt.py
